# mnist-demo

./: .gitmodules  README.md  build.bat  build.sh  run.bat  run.sh  win-compile.sh
docker/: Dockerfile
src/: CMakeLists.txt  Layer.hpp  Model.hpp  demo.cpp  main.cpp
src/app/: App.cpp  App.hpp  AppDefs.hpp  CMakeLists.txt  IntegrateWorkManager.cpp  IntegrateWorkManager.hpp  IntegrateWorkSequence.cpp  IntegrateWorkSequence.hpp  PauseCommand.hpp  README.md  RestartCommand.hpp  ResumeCommand.hpp  StatusCommand.hpp  StopCommand.hpp  ValueSink.hpp  WarpWorkManager.cpp  WarpWorkManager.hpp  WarpWorkSequece.hpp  WarpWorkSequence.hpp
src/mnet/: Activations.hpp  CMakeLists.txt  Layer.hpp
src/parser/: CommandParser.hpp  EchoCommand.hpp  Parser.cpp  Parser.hpp  README.md
src/point-cloud/: CMakeLists.txt  PointCloud.hpp  README.md  UniformPointSources.hpp  UniformPointStream.hpp  UniformValueSource.hpp
src/threads/: CMakeLists.txt  CoutWorkSequence.cpp  CoutWorkSequence.hpp  README.md  ResThread.hpp  ThreadDefs.hpp  ThreadRunner.cpp  ThreadRunner.hpp
